--- a/code/dev/parts/trafficAlerts/new.html
+++ b/code/dev/parts/trafficAlerts/new.html
@@ -43,7 +43,7 @@
               <ui-select ng-if="!_loading && companies.length>0" ng-animate-disabled theme="select2" ng-disabled="_loading" ng-model="model.account_id"
                 id="company" name="accountId" on-select="onAccountSelect($model)">
                 <ui-select-match placeholder="Select Account">{{$select.selected.companyName}}</ui-select-match>
-                <ui-select-choices repeat="item.id as  item in companies | filter: {companyName: $select.search}">
+                <ui-select-choices repeat="item.id as item in companies | filter: {companyName: $select.search}">
                   <div ng-bind-html="item.companyName|highlight: $select.search"></div>
                 </ui-select-choices>
               </ui-select>
@@ -75,10 +75,10 @@
             <div class="col-sm-10">
               <span ng-show="_loading ||(!_loading && (getAccountsDomainNameList().length==0 && companies.length==0))">
                 <i class="glyphicon glyphicon-refresh spin"></i> Please wait...</span>
-              <ui-select ng-if="!_loading && (getAccountsDomainNameList().length>0 || companies.length>0)" theme="select2"
-                ng-disabled="_loading" ng-model="model.target" id="target" name="target">
+              <ui-select ng-if="!_loading && (getAccountsDomainNameList().length>0 || companies.length>0)" ng-animate-disabled theme="select2"
+                ng-disabled="_loading" ng-model="model.target" id="target" name="target" on-select="onTargeSelect($model)">
                 <ui-select-match placeholder="{{domainPlaceholder}}">{{$select.selected.domain_name}}</ui-select-match>
-                <ui-select-choices repeat="item.domain_name as item  in getAccountsDomainNameList()| filter: {domain_name: $select.search}">
+                <ui-select-choices repeat="item.domain_name as item in getAccountsDomainNameList()| filter: {domain_name: $select.search}">
                   <div ng-bind-html="item.domain_name|highlight: $select.search"></div>
                 </ui-select-choices>
               </ui-select>
